--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "flowbite-react": "^0.6.4",
         "react-datepicker": "^4.18.0",
         "react-icons": "^4.11.0",
+        "react-toastify": "^9.1.3",
         "tw-elements": "^1.0.0"
     }
 }
