--- a/package.json
+++ b/package.json
@@ -20,13 +20,20 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@emotion/react": "^11.11.1",
+        "@emotion/styled": "^11.11.0",
         "@heroicons/react": "^2.0.18",
+        "@mui/lab": "^5.0.0-alpha.153",
+        "@mui/material": "^5.14.18",
+        "@mui/styled-engine-sc": "^6.0.0-alpha.6",
         "aos": "^2.3.4",
+        "dayjs": "^1.11.10",
         "flowbite": "^1.8.1",
         "flowbite-react": "^0.6.4",
         "react-datepicker": "^4.18.0",
         "react-icons": "^4.11.0",
         "react-toastify": "^9.1.3",
+        "styled-components": "^6.1.1",
         "tw-elements": "^1.0.0"
     }
 }
