--- a/.ebextensions/02-artisan-command.config
+++ b/.ebextensions/02-artisan-command.config
@@ -14,7 +14,8 @@ container_commands:
     07-chmod_bootstrap:
         command: "chmod 775 bootstrap -R"
     08-migrate:
-        command: "php artisan migrate"
+        command: "ls .env"
+        command: "php artisan migrate --force"
     09-link:
         command: "ln -s ../storage/app/public public/storage"
     10-seeders:
