--- a/.ebextensions/02-artisan-command.config
+++ b/.ebextensions/02-artisan-command.config
@@ -24,6 +24,8 @@ container_commands:
         command: "npm install"
     12-npm_dependencies:
         command: "npm run build"
+    13-moved-folders:
+        command: "cp public/images public/build/assets
 files:
     /opt/elasticbeanstalk/tasks/taillogs.d/laravel-logs.conf:
         content: /var/app/current/storage/logs/laravel.log
