fix: moved folder

--- a/.ebextensions/02-artisan-command.config
+++ b/.ebextensions/02-artisan-command.config
@@ -25,7 +25,7 @@ container_commands:
     12-npm_dependencies:
         command: "npm run build"
     13-moved-folders:
-        command: "cp public/images public/build/assets
+        command: "cp public/images public/build/assets"
 files:
     /opt/elasticbeanstalk/tasks/taillogs.d/laravel-logs.conf:
         content: /var/app/current/storage/logs/laravel.log
