--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "flowbite-react": "^0.6.4",
         "react-datepicker": "^4.18.0",
         "react-icons": "^4.11.0",
+        "react-to-print": "^2.14.15",
         "react-toastify": "^9.1.3",
         "styled-components": "^6.1.1",
         "tw-elements": "^1.0.0"
